<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:paddingBottom="18dp"
                android:text="@string/title"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24dp" />
            <!--Số tiền gửi-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="18dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:paddingBottom="10dp"
                    android:text="@string/interest_received"
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/interest_received"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:textSize="22dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="18dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:paddingBottom="10dp"
                    android:text="@string/total"
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:textSize="22dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_color"
            android:layout_margin="30dp"
            android:onClick="takePicture"
            android:text="@string/button_take_picture"
            app:backgroundTint="@color/backgroundBTN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>